--- a/source/_posts/ARC164题解.md
+++ b/source/_posts/ARC164题解.md
@@ -1,6 +1,6 @@
 ---
 title: ARC164题解
-index_img: /img/algorithm.jpg
+index_img: /img/banner/algorithm.jpg
 date: 2023-07-10 12:37:08
 tags:
 - algorithm
