--- a/source/_posts/Poj3278.md
+++ b/source/_posts/Poj3278.md
@@ -5,7 +5,7 @@ categories:
 - [算法学习,BFS]
 tags:
 - algorithm
-index_img: /img/algorithm.jpg
+index_img: /img/banner/algorithm.jpg
 ---
 
 # Poj 3278  农夫追牛
