--- a/source/_posts/ABC212.md
+++ b/source/_posts/ABC212.md
@@ -1,6 +1,6 @@
 ---
 title: ABC212
-index_img: /img/algorithm.jpg
+index_img: /img/banner/algorithm.jpg
 date: 2023-07-18 13:10:51
 tags:
 categories: 
@@ -81,5 +81,5 @@ int main()
 
 
 
-**思路：**dp
+**思路** ：dp
 
