--- a/source/_posts/Poj2227.md
+++ b/source/_posts/Poj2227.md
@@ -1,7 +1,7 @@
 ---
 title: Poj2227题解 水库体积
 date: 2023-04-02 21:02:39
-index_img: /img/algorithm.jpg
+index_img: /img/banner/algorithm.jpg
 tags:
 - algorithm
 categories:
